--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="8; url=ideal_state.html"/>
     <link href="styles/style.css" rel="stylesheet">
+    <link rel="icon" type="images/svg+xml" href="images/loading_icon.png">
+
     <title>Luiaard</title>
 </head>
 
