--- a/animatie_autorijden.html
+++ b/animatie_autorijden.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/style.css" rel="stylesheet">
+    <link rel="icon" type="images/svg+xml" href="images/stuur.png">
+
     <title>Autorijden</title>
 </head>
 
