changed code nav

--- a/animatie_dansen.html
+++ b/animatie_dansen.html
@@ -14,10 +14,12 @@
     <main>
         <header>
             <nav>
-                <a href="ideal_state.html"><img src="images/terug.png" alt="Icoon om terug te gaan"></a>
-                <a href="animatie_dansen.html"><img src="images/feestmuts.png" alt="Icoon om te feesten en dansen"></a>
-                <a href="animatie_klimmen.html"><img src="images/klimmen.png" alt="Icoon om te klimmen"></a>
-                <a href="animatie_autorijden.html"><img src="images/stuur.png" alt="Icoon om auto te rijden"></a>
+                <ul>
+                    <li><a href="ideal_state.html"><img src="images/terug.png" alt="Icoon om terug te gaan"></a></li>
+                    <li><a href="animatie_dansen.html"><img src="images/feestmuts.png" alt="Icoon om te feesten en dansen"></a></li>
+                    <li><a href="animatie_klimmen.html"><img src="images/klimmen.png" alt="Icoon om te klimmen"></a></li>
+                    <li><a href="animatie_autorijden.html"><img src="images/stuur.png" alt="Icoon om auto te rijden"></a></li>
+                </ul>    
             </nav>
         </header>
 
